--- a/public/pages/navigation-directive/navigation-directive.html
+++ b/public/pages/navigation-directive/navigation-directive.html
@@ -11,6 +11,7 @@
    </div>
    <div id="navbar" class="collapse navbar-collapse">
      <ul class="nav navbar-nav">
+       <!-- The active makes the button darker -->
        <li class="active"><a href="#!/">Home</a></li>
        <li><a href="#!/vacationList">My Vacations</a></li>
        <li><a href="#!/register">Register</a></li>
