Different attempts to use googlemaps api

--- a/public/pages/homepage/homepage.html
+++ b/public/pages/homepage/homepage.html
@@ -1,1 +1,10 @@
 <h2> Welcome to the homepage <h2>
+  <input ng-model="test" type="text"></input>
+  <p> {{test}}</p>
+  <!-- <iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyC0FFudvQDUgPoVz4gYakR38Z9D7JQxVLw
+  &q=Austin+TX" allowfullscreen>
+  </iframe> -->
