--- a/public/pages/profile/profile.html
+++ b/public/pages/profile/profile.html
@@ -3,3 +3,8 @@
 <p> Here is the username </p>
 <p> Here is the password </p>
 <p> Here are the list of vacations </p>
+<p> This is an attempt at using a directive for maps </p>
+<p> Here is a list of your vacations! </p>
+<ul>
+  <li>Example one </li>
+<div my-map=""></div>
