--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,34 @@
   </head>
   <body>
     <impulsevacation-nav></impulsevacation-nav>
-      <div class="container" ng-view></div>
 
+      <div class="container" ng-view></dinitMapiv>
+
+    <div id="map"></div>
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 8
+        });
+      }
+    </script>
 
     <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
     <script src="pages/app.js"></script>
     <script src="pages/navigation-directive/navigation-directive.js"></script>
+
+    <script src="pages/vacationList/map.js"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0FFudvQDUgPoVz4gYakR38Z9D7JQxVLw&callback=initMap"></script> -->
+    <script 
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0FFudvQDUgPoVz4gYakR38Z9D7JQxVLw&callback=initMap">
+    </script>
+    <script src="pages/profile/maps-directive.js"></script>
+
+    </script>
+    </svg>
   </body>
 </html>
