--- a/public/pages/register/register.html
+++ b/public/pages/register/register.html
@@ -2,3 +2,14 @@
 <span> Username: <input type="text"></input></span>
 <br />
 <span> Password: <input type="text"></input></span>
+
+<div id="map"></div>
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 8
+        });
+      }
+    </script>
