--- a/public/pages/vacationList/vacationList.html
+++ b/public/pages/vacationList/vacationList.html
@@ -1,4 +1,5 @@
 <h1> This is the html for the list of vacations </h1>
+<p> This is an attempt at using maps with a controller </p>
 <ul>
   <li> First Item </li>
   <li> Second Item </li>
